--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -28,7 +28,7 @@
               {{ rndKey }}
             </mat-card-content>
             <mat-card-actions>
-              <button mat-button (click)="shuffleRndKey()">
+              <button class="btn btn-sm btn-action" (click)="shuffleRndKey()">
                 Generate
               </button>
             </mat-card-actions>
@@ -42,7 +42,7 @@
             </mat-card-header>
             <mat-card-content style="word-wrap: break-word;">
               <form [formGroup]="cipherInputsForm">
-                <mat-form-field style="width:50vw">
+                <mat-form-field style="width: 50vw;">
                   <textarea
                     matInput
                     cdkTextareaAutosize
@@ -77,226 +77,204 @@
                     Please, text must include letters a-z or A-Z.
                   </mat-error>
                 </mat-form-field>
-                <div>
-                  <button mat-button (click)="encryptEndDecryptMessage()">
-                    Encrypt and Decrypt Message
-                  </button>
-                </div>
               </form>
             </mat-card-content>
+            <mat-card-actions>
+              <button
+                class="btn btn-sm btn-action"
+                (click)="encryptEndDecryptMessage()"
+              >
+                Encrypt and Decrypt Message
+              </button>
+            </mat-card-actions>
           </mat-card>
+        </div>
+
+        <br />
+        <div class="row">
+          <div class="col-md-6 remove-left-marigns">
+            <mat-card class="computed-mat-card">
+              <mat-card-header>
+                <mat-card-title>Encrypted Text</mat-card-title>
+              </mat-card-header>
+              <mat-card-content style="word-wrap: break-word;">
+                {{ encryptedText }}
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class="col-md-6 remove-right-marigns">
+            <mat-card class="computed-mat-card">
+              <mat-card-header>
+                <mat-card-title>Dencrypted Text</mat-card-title>
+              </mat-card-header>
+              <mat-card-content style="word-wrap: break-word;">
+                <p>
+                  {{ decryptedText }}
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </div>
         </div>
       </div>
 
       <br />
-      <br />
+    </div>
+    <div class="container" id="findKey">
       <div class="row">
-        <div class="col-md-6 remove-left-marigns">
-          <mat-card>
-            <mat-card-header>
-              <mat-card-title>Encrypted Text</mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="word-wrap: break-word;">
-              {{ encryptedText }}
-            </mat-card-content>
-          </mat-card>
-        </div>
-        <div class="col-md-6 remove-right-marigns">
-          <mat-card>
-            <mat-card-header>
-              <mat-card-title>Dencrypted Text</mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="word-wrap: break-word;">
-              <p>
-                {{ decryptedText }}
-              </p>
-            </mat-card-content>
-          </mat-card>
-        </div>
-      </div>
-    </div>
-
-    <br />
-  </div>
-  <div class="container" id="findKey">
-    <div class="row">
-      <mat-card class="info-mat-card col-md-12">
-        <mat-card-header>
-          <mat-card-title
-            >Find decryption key with Hill Climbing alghorithm</mat-card-title
-          >
-        </mat-card-header>
-        <mat-card-content style="word-wrap: break-word;">
-          To find key we will be repeat next steps:
-          <ul style="list-style-type:disc;">
-            <li>
-              swap 2 letters of key - we compute freguencies of bigrams
-            </li>
-            <li>
-              calculate difference between calculated frequencies and referal
-              values for English alphabet
-            </li>
-            <li>save only better result</li>
-            <li>
-              if we got better result then in next step we use this key from
-              better result.
-            </li>
-          </ul>
-          These steps we repeat for n times
-        </mat-card-content>
-      </mat-card>
-    </div>
-
-    <br />
-    <div class="row">
-      <mat-card class="col-md-12 action-mat-card">
-        <mat-card-header>
-          <mat-card-title>Generated random key</mat-card-title>
-        </mat-card-header>
-        <mat-card-content style="word-wrap: break-word;">
-          We generate random key for Hill Climbing
-
-          <h5>We generate random key {{ rndKey }}</h5>
-          <h5>We try to find key {{ keys.decKey }}</h5>
-
-          <form [formGroup]="cipherAttemptForm">
-            <mat-form-field>
-              <input
-                matInput
-                type="number"
-                placeholder="Set number of attempts"
-                name="attemptInput"
-                formControlName="numberOfAttempt"
-                min="1"
-                max="10"
-              />
-              <mat-hint>Please, enter number from 1 to 10. </mat-hint>
-              <mat-error
-                *ngIf="
-                  cipherAttemptForm.get('numberOfAttempt').hasError('max') ||
-                  cipherAttemptForm.get('numberOfAttempt').hasError('min')
-                "
-              >
-                Please, enter number from 1 to 10.
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input
-                matInput
-                type="number"
-                placeholder="Set number of iterations"
-                name="iterationsInput"
-                formControlName="numberOfIterations"
-                min="100"
-                max="10000"
-              />
-              <mat-hint>Please, enter number from 100 to 10 000. </mat-hint>
-              <mat-error
-                *ngIf="
-                  cipherAttemptForm.get('numberOfIterations').hasError('max') ||
-                  cipherAttemptForm.get('numberOfIterations').hasError('min')
-                "
-              >
-                Please, enter number from 100 to 10 000.
-              </mat-error>
-            </mat-form-field>
-          </form>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button (click)="calcDataForPage()">
-            Guess Key
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <br />
-    <br />
-
-    <div *ngIf="theBestGuess" [ngClass]="{ hide: !calcDone, show: calcDone }">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>The best finded key</mat-card-title>
-          <mat-card-subtitle> {{ theBestGuess.key }} </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content style="word-wrap: break-word;">
-          <p>{{ theBestGuess.decryptedText | slice: 0:150 }}</p>
-          <h5>Sum {{ theBestGuess.sum | number: "1.0-3" }} *</h5>
-          <p>
-            <small>
-              *difference between calculated frequencies and referal values for
-              English alphabet)
-            </small>
-          </p>
-        </mat-card-content>
-      </mat-card>
-      <br />
-    </div>
-  </div>
-  <!-- <div  [ngClass]="{ hide: !calcDone, show: calcDone }" class="container" id="compareBigrams">
-    <div class="row">
-      <div class="col-md-12 col-xs-12">
-        <mat-card>
-          <mat-card-content>
-            <app-graph
-              #comparefreqBigramsGraph
-              [chartOptionsFreqGraph]="chartOptionsFreqGraph"
-              [data]="dataSourceCompareFreqGraph"
-            ></app-graph>
-            <div class="col-md-12 text-center">
-              <mat-button-toggle-group
-                class="btn-group"
-                [(ngModel)]="selectedValue"
-                #group="matButtonToggleGroup"
-              >
-                <mat-button-toggle
-                  *ngFor="let item of toggleOptions"
-                  (change)="selectionOfGraphChanged($event)"
-                  [value]="item"
-                >
-                  {{ item }}</mat-button-toggle
-                >
-              </mat-button-toggle-group>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </div>
-  </div> -->
-  <div [ngClass]="{ hide: !calcDone, show: calcDone }" class="container">
-    <div class="row">
-      <div class="col-md-12 col-xs-12">
-        <mat-card>
+        <mat-card class="info-mat-card col-md-12">
           <mat-card-header>
             <mat-card-title
-              >Evolution of sum and match rate during iterations, only for the
-              best guess
-            </mat-card-title>
-          </mat-card-header>
-
-          <mat-card-content>
-            <app-table
-              [columnNames]="columnsBestResults"
-              [dataSource]="dataSourceBestResults"
-              [defaultSort]="sortBestResults"
-              [ready]="dataSourceBestResultsReady"
+              >Find decryption key with Hill Climbing alghorithm</mat-card-title
             >
-            </app-table>
+          </mat-card-header>
+          <mat-card-content style="word-wrap: break-word;">
+            To find key we will be repeat next steps:
+            <ul style="list-style-type: disc;">
+              <li>
+                swap 2 letters of key - we compute freguencies of bigrams
+              </li>
+              <li>
+                calculate difference between calculated frequencies and referal
+                values for English alphabet
+              </li>
+              <li>save only better result</li>
+              <li>
+                if we got better result then in next step we use this key from
+                better result.
+              </li>
+            </ul>
+            These steps we repeat for n times
           </mat-card-content>
         </mat-card>
       </div>
+
+      <br />
+      <div class="row">
+        <mat-card class="col-md-12 action-mat-card">
+          <mat-card-header>
+            <mat-card-title>Generated random key</mat-card-title>
+          </mat-card-header>
+          <mat-card-content style="word-wrap: break-word;">
+            We generate random key for Hill Climbing
+
+            <h5>We generate random key {{ rndKey }}</h5>
+            <h5>We try to find key {{ keys.decKey }}</h5>
+
+            <br>
+
+            <form [formGroup]="cipherAttemptForm">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="number"
+                  placeholder="Set number of attempts"
+                  name="attemptInput"
+                  formControlName="numberOfAttempt"
+                  min="1"
+                  max="10"
+                />
+                <mat-hint>Please, enter number from 1 to 10. </mat-hint>
+                <mat-error
+                  *ngIf="
+                    cipherAttemptForm.get('numberOfAttempt').hasError('max') ||
+                    cipherAttemptForm.get('numberOfAttempt').hasError('min')
+                  "
+                >
+                  Please, enter number from 1 to 10.
+                </mat-error>
+              </mat-form-field>
+
+              <mat-form-field>
+                <input
+                  matInput
+                  type="number"
+                  placeholder="Set number of iterations"
+                  name="iterationsInput"
+                  formControlName="numberOfIterations"
+                  min="100"
+                  max="10000"
+                />
+                <mat-hint>Please, enter number from 100 to 10 000. </mat-hint>
+                <mat-error
+                  *ngIf="
+                    cipherAttemptForm
+                      .get('numberOfIterations')
+                      .hasError('max') ||
+                    cipherAttemptForm.get('numberOfIterations').hasError('min')
+                  "
+                >
+                  Please, enter number from 100 to 10 000.
+                </mat-error>
+              </mat-form-field>
+            </form>
+          </mat-card-content>
+          <mat-card-actions>
+            <button class="btn btn-sm btn-action" (click)="calcDataForPage()">
+              Guess Key
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+      <br />
+
+      <div
+        class="row"
+        *ngIf="theBestGuess"
+        [ngClass]="{ hide: !calcDone, show: calcDone }"
+      >
+        <mat-card class="col-md-12 computed-mat-card">
+          <mat-card-header>
+            <mat-card-title>The best finded key</mat-card-title>
+            <mat-card-subtitle> {{ theBestGuess.key }} </mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content style="word-wrap: break-word;">
+            <p>{{ theBestGuess.decryptedText | slice: 0:150 }}</p>
+            <h5>Sum {{ theBestGuess.sum | number: "1.0-3" }} *</h5>
+            <p>
+              <small>
+                *difference between calculated frequencies and referal values
+                for English alphabet)
+              </small>
+            </p>
+          </mat-card-content>
+        </mat-card>
+        <br />
+      </div>
     </div>
-  </div>
-  <br />
-  <div
-    [ngClass]="{ hide: !calcDone, show: calcDone }"
-    class="container"
-    id="compareBigrams"
-  >
-    <div class="row">
+
+    <div [ngClass]="{ hide: !calcDone, show: calcDone }" class="">
+      <div class="row">
+        <div class="col-md-12 col-xs-12">
+          <mat-card class="computed-mat-card">
+            <mat-card-header>
+              <mat-card-title
+                >Evolution of sum and match rate during iterations, only for the
+                best guess
+              </mat-card-title>
+            </mat-card-header>
+
+            <mat-card-content>
+              <app-table
+                [columnNames]="columnsBestResults"
+                [dataSource]="dataSourceBestResults"
+                [defaultSort]="sortBestResults"
+                [ready]="dataSourceBestResultsReady"
+              >
+              </app-table>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div
+      [ngClass]="{ hide: !calcDone, show: calcDone }"
+      class="row"
+      id="compareBigrams"
+    >
       <div class="col-md-12 col-xs-12">
-        <mat-card>
+        <mat-card class="computed-mat-card">
           <mat-card-content>
             <app-graph
               #iterScoreGraph
@@ -307,22 +285,22 @@
         </mat-card>
       </div>
     </div>
-  </div>
 
-  <div class="container">
-    <div class="row">
-      <mat-card
-        class="text-center col-md-12"
-        [ngClass]="{ hide: calcDone, show: !calcDone }"
-      >
-        <mat-card-content>
-          <h5>Please wait, after calculation ends</h5>
-          <br />
-          <mat-progress-spinner class="spinner" [mode]="'indeterminate'">
-          </mat-progress-spinner>
-        </mat-card-content>
-      </mat-card>
+    <div class="container">
+      <div class="row">
+        <mat-card
+          class="text-center col-md-12"
+          [ngClass]="{ hide: calcDone, show: !calcDone }"
+        >
+          <mat-card-content>
+            <h5>Please wait, after calculation ends</h5>
+            <br />
+            <mat-progress-spinner class="spinner" [mode]="'indeterminate'">
+            </mat-progress-spinner>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
   </div>
-  <br>
+  <br />
 </app-side-navbar>
