--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 /* Import for  LaTeX equation  */
-@import '~katex/dist/katex.css';
+@import "~katex/dist/katex.css";
 
-html, body { 
-    height: 100%;
-    background-color:#E8E8E8;
-
+html,
+body {
+  height: 100%;
+  background-color: #e8e8e8;
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
