Enhanced mobile view responsibility
to table added option to add Sticky column, scrolable graphs

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,8 @@
           <a routerLink="/about">About</a>
         </li>
         <li class="main-footer__link">
-          <p>Copyright © 2020 František Franko</p>
+          <a routerLink="/about">      Copyright © 2020 František Franko</a>
+    
         </li>
       </ul>
     </nav>
