--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -23,7 +23,7 @@
     <li class="number-circle-list--list-item">Ordered list - third list item</li>
 </ol> -->
     </mat-sidenav>
-    <mat-sidenav-content class="col-md-10">
+    <mat-sidenav-content class="remove-left-margin col-md-10">
       <ng-content>
       </ng-content>
      
