--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.scss
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.scss
@@ -2,3 +2,13 @@
   height: 400px;
   overflow: auto;
 }
+.responsive-toogle-btn-group > * {
+  flex-grow: 0;
+}
+
+.responsive-toogle-btn-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
