--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -257,6 +257,7 @@
             <mat-card-content>
               <app-table
                 [columnNames]="columnsBestResults"
+                [stickyColumns]="stickyColumns"
                 [dataSource]="dataSourceBestResults"
                 [defaultSort]="sortBestResults"
                 [ready]="dataSourceBestResultsReady"
