--- a/src/app/components/side-navbar/side-navbar.component.css
+++ b/src/app/components/side-navbar/side-navbar.component.css
@@ -18,9 +18,10 @@
   box-shadow: none;
   border: none;
   padding-left: 0;
+  
   /* position: sticky; */
   float: left;
-  top: 9vh;
+  top: 21vh !important;
 }
 
 .fixed {
@@ -64,4 +65,15 @@ ol li::before {
   padding-left: 0.6rem;
   padding-right: 0.3rem;
   margin-right: 0.5rem;
+}
+
+@media screen and (max-width: 800px) {
+  .side-nav {
+    position: relative;
+    top: 0 !important;
+  }
+
+  .remove-left-margin {
+    margin-left: 0 !important;  
+  }
 }
