--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -1,4 +1,4 @@
-<app-side-navbar [topGap]="topGap" class="col-md-12">
+<app-side-navbar [topGap]="topGap" class="d-block">
   <!-- <button mat-button (click)="sidenav.toggle()">Toggle</button> -->
   <div class="container">
     <div id="inputs">
