--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,12 +1,31 @@
 body {
   padding-top: 70px;
 }
+
+.fixed {
+  position: fixed;
+  width: 100%;
+  z-index: 102;
+}
+
 .bg-navbar-blue {
   background-color: #255e69 !important;
 }
 
 .navbar-brand {
+  padding: 0.7vh 0;
+  padding-right: 3vw;
+  /* margin-right: 1rem; */
+  font-size: 1.25rem;
+  /* line-height: inherit; */
+  /* white-space: nowrap; */
+  display: flex;
+  align-items: center;
   color: white !important;
+}
+
+.navbar-brand > span {
+  padding: 0.7vw;
 }
 
 .cipher-name {
@@ -28,22 +47,28 @@ body {
 }
 
 .main-navbar {
-  padding: 0.5vh 0;
+  display: flex;
+  border-bottom: 3px solid white;
+  padding-bottom: 12px;
+  width: 100%;
+  height: 80px;
+  z-index: 102;
+  /* padding: 1vh 0;
   margin-bottom: 1vh;
+  padding-left: 1vw;
   position: fixed;
   width: 100%;
   height: 9vh;
   z-index: 101;
   box-sizing: border-box;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid white; */
 }
 
 .cipher-navbar {
-  padding: 1.5rem 0;
-  position: fixed;
-  width: 100%;
-  z-index: 100;
-  top: 7.2vh;
+  padding: 1.5vh 0;
+  /* margin: 10px 0; */
+  /* border-top: 4px solid white; */
+  z-index: 99;
 }
 
 .navbar-sticky > p {
@@ -93,17 +118,64 @@ body {
   text-align: center;
 }
 
+.navbar-toogle {
+  z-index: 100;
+  background-color: #255e69;
+}
+
+.align-main-navbar {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.dropdown-menu {
+  margin-top: -7px !important;
+  color: #ffffff;
+  background-color: #255e69;
+  border: none;
+}
+
+.dropdown-menu > li > a {
+  color: white;
+}
+
+a:hover {
+  color: black;
+}
+
+.dropdown-menu > li > a:hover {
+  background-color: #6a959d;
+}
+
 @media screen and (min-width: 200px) {
   .center-navbar {
     margin-left: 10rem;
   }
 }
 
-
 @media screen and (min-width: 1100px) {
   .center-navbar {
     margin: auto;
   }
-  
 }
 
+@media screen and (max-width: 992px) {
+  .navbar-brand {
+    margin: auto;
+  }
+
+  .navbar-toogle {
+    /* border: 2px solid white ; */
+    border-top: none;
+    margin-top: 10px;
+    padding-left: 10px;
+  }
+
+  .align-main-navbar {
+    flex-direction: row-reverse !important;
+    align-items: center;
+    justify-content: flex-end;
+  }
+}
