--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
@@ -1,4 +1,4 @@
-<app-side-navbar [sideMenu]="sideMenu" [topGap]="topGap" class="col-md-12">
+<app-side-navbar [sideMenu]="sideMenu" [topGap]="topGap" class="d-block">
   <div class="container">
     <mat-card class="col-md-12 info-mat-card">
       <mat-card-header>
