--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -210,7 +210,7 @@
           </mat-card-content>
           <mat-card-actions>
             <button class="btn btn-sm btn-action" (click)="calcDataForPage()">
-              Guess Key
+              Run the attack
             </button>
           </mat-card-actions>
         </mat-card>
