Caesar C. Text changes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
             height="40"
             alt=""
           />
-          <span>Clasical Ciphers</span>
+          <span>Classical Ciphers</span>
         </a>
         <button
           class="navbar-toggler"
