--- a/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
+++ b/src/app/pages/caesar-cipher-module/caesar-cipher-component/caesar-cipher.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <mat-card class="col-md-12 info-mat-card">
       <mat-card-header>
-        <mat-card-title>Description</mat-card-title>
+        <mat-card-title>Description of Caesar Cipher</mat-card-title>
       </mat-card-header>
       <mat-card-content style="word-wrap: break-word;">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="  ">
           The main function of Caesar Cipher is replace every letter in message
           with diferent letter. Different letter is shift by n letters in 26
           alpahabet. For example: when we use shift 2, a will be c.
@@ -121,22 +121,17 @@
       <br />
 
       <div class="row">
-        <mat-card id="frequency" class="col-md-12 computed-mat-card">
+        <mat-card id="attack" class="col-md-12 info-mat-card">
           <mat-card-header>
-            <mat-card-title>Frequency of Encrypted Message</mat-card-title>
+            <mat-card-title>Description of Attack</mat-card-title>
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
-            <p>
-              We calculate frequency of letters by couting occurence every
-              letter from 26 alphabet and convert to percentage
-            </p>
-
-            <div class="container">
-              <app-graph
-                #freqGraph
-                [chartOptionsFreqGraph]="chartOptionsFreqGraph"
-                [data]="dataSourceFreqGraph"
-              ></app-graph>
+            <div>
+              To break a Caesar cipher we decide to use a brute force attack
+              with statistical analysis. We can find all combinations of keys
+              because Caesar cipher has a small number of combinations. We are
+              working with the telegraphic English alphabet (26 letters), so it
+              is relatively quick to find the correct key/shift.
             </div>
           </mat-card-content>
         </mat-card>
@@ -145,30 +140,64 @@
       <br />
 
       <div class="row">
-        <mat-card id="index" class="info-mat-card col-md-12">
+        <mat-card class="col-md-12 info-mat-card">
           <mat-card-header>
-            <mat-card-title>Index of Coincidence for Message</mat-card-title>
+            <mat-card-title
+              >Frequencies and Index of coincidence</mat-card-title
+            >
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
-            <div class="row">
-              <div class="col-md-12">
-                <p>
-                  The index of coincidence is an indicator used in cryptanalysis
-                  which makes it possible to evaluate the global distribution of
-                  letters in encrypted message for a given alphabet. Source:
-                  https://www.dcode.fr/index-coincidence
-                </p>
-                <h3><ng-katex [equation]="equation"></ng-katex></h3>
-                <app-table
-                  class="col-md-4"
-                  [columnNames]="columnsRefFreqLanguage"
-                  [dataSource]="dataSourceRefFreqLang"
-                  [defaultSort]="sortRefFreqLang"
-                  [ready]="dataSourceRefFreqLangReady"
-                  [fullWidth]="false"
-                >
-                </app-table>
-              </div>
+            <div>
+              First we need to find out the length of key/shift. For this we
+              must understand the frequencies of text and index of coincidence.
+
+              <p>
+                We calculate <b>the frequency</b> of letters by counting the
+                occurrence of every letter in the text, then we divide it with
+                the length of text. After that we convert it to a percentage.
+              </p>
+              <p>
+                <b>Index coincidence (IC)</b> is based on the relative
+                frequencies of letters. It reflects the accuracy that two texts
+                (choose randomly) will be the same. With IC we can identify the
+                language of the text.
+              </p>
+              We compute IC with the equation:
+              <h3><ng-katex [equation]="equation"></ng-katex>,</h3>
+              <p> where N is the length of text, n<sub>i</sub> is number a
+              occurrences of letters in the text.</p>
+            </div>
+
+            <b> IC for the most used languages</b>
+            <app-table
+              class="col-md-4"
+              [columnNames]="columnsRefFreqLanguage"
+              [dataSource]="dataSourceRefFreqLang"
+              [defaultSort]="sortRefFreqLang"
+              [ready]="dataSourceRefFreqLangReady"
+              [fullWidth]="false"
+            >
+            </app-table>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+      <br />
+
+      <div class="row">
+        <mat-card id="frequency" class="col-md-12 computed-mat-card">
+          <mat-card-header>
+            <mat-card-title>Frequency of Encrypted Message</mat-card-title>
+          </mat-card-header>
+          <mat-card-content style="word-wrap: break-word;">
+            <p></p>
+
+            <div class="container">
+              <app-graph
+                #freqGraph
+                [chartOptionsFreqGraph]="chartOptionsFreqGraph"
+                [data]="dataSourceFreqGraph"
+              ></app-graph>
             </div>
           </mat-card-content>
         </mat-card>
@@ -189,14 +218,14 @@
             >
               <strong>Input text is not from language</strong>
               <br />
-              <span>Index of coincidence for encrypted text is: {{ ic }}</span>
+              <span>Index of coincidence for encrypted text is: {{ ic | number: "1.0-3" }}</span>
 
               <br />
             </div>
             <ng-template #notPassed>
               <div class="alert computed-box" role="alert">
                 <span
-                  >Index of coincidence for encrypted text is: {{ ic }}</span
+                  >Index of coincidence for encrypted text is: {{ ic | number: "1.0-3"  }}</span
                 >
                 <br />
                 <span
@@ -215,10 +244,10 @@
 
             <h6>
               For every shift we make difference between frequency of letter
-              from encrypted text and real data for language
+              from encrypted text and real data for language. Then we sum these differences and the column „sum“ is this result.
             </h6>
-            <span>Based of minimum frequency for shift, we guess shift</span>
-            <br>
+            <span>Based of minimum frequency for shift, we guess shift in first row</span>
+            <br />
             <app-table
               [columnNames]="columnsCalcFreqLanguage"
               [stickyColumns]="stickyColumnsCalcFreqLanguage"
@@ -237,15 +266,16 @@
         <mat-card id="compare" class="col-md-12 computed-mat-card">
           <mat-card-header>
             <mat-card-title
-              >Compare Language accuracy of message with real
-              data</mat-card-title
+              >Compare Language accuracy of the message with real data
+              </mat-card-title
             >
           </mat-card-header>
           <mat-card-content style="word-wrap: break-word;">
             <p>
-              Based on minimal frequency we guess that length of is
-              {{ minDisctanceLength }}. When we compare frequencies of letters
-              with real data of english language we can see the similarity
+              Based on the minimal frequency we guess that length is 
+              {{ minDisctanceLength }}. 
+              When we compare frequencies of letters with real data of the English language we can see the similarity. 
+              If we compare other shifts with referral values, they are different.
             </p>
 
             <div class="container">
@@ -257,7 +287,7 @@
                   [data]="dataSourceCompareFreqGraph"
                 ></app-graph>
               </div>
-              <br>
+              <br />
               <div class="row">
                 <mat-button-toggle-group
                   class="btn-group responsive-toogle-btn-group center-toogle-group"
